syntax = "proto3";

package coupon.v1;

option go_package = "couponIssuanceSystem/gen/coupon/v1;couponv1";

import "google/protobuf/timestamp.proto";

service CouponService {
  rpc IssueCoupon(IssueCouponRequest) returns (IssueCouponResponse);
}

message IssueCouponRequest {
  string campaign_id = 1;
  string user_id = 2;
}

message IssueCouponResponse {
  string code = 1;
  string campaign_id = 2;
  string user_id = 3;
  google.protobuf.Timestamp issued_at = 4;
}
